--- a/index.html
+++ b/index.html
@@ -139,6 +139,11 @@
 
         <script src="js/libs/jquery.js"></script>
         <script src="js/app.js"></script>
-
+<script>
+	console.log('holaindex');
+	console.log(ServiceWorkerContainer);
+	console.log(ServiceWorkerContainer.register());
+	</script>
+	
 </body>
 </html>
