--- a/index.html
+++ b/index.html
@@ -141,8 +141,8 @@
         <script src="js/app.js"></script>
 <script>
 	console.log('holaindex');
-	console.log(ServiceWorkerContainer);
-	console.log(ServiceWorkerContainer.register());
+	console.log(('serviceWorker' in navigator ));
+
 	</script>
 	
 </body>
