--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
         <script src="js/libs/jquery.js"></script>
         <script src="js/app.js"></script>
 <script>
-	console.log('holaindex');
+	console.log('holaindexxxx');
 	console.log(('serviceWorker' in navigator ));
 
 	</script>
